added basic score values added TetrisPlayer